k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legacy-perl-deployment
  labels:
    app: legacy-perl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: legacy-perl
  template:
    metadata:
      labels:
        app: legacy-perl
    spec:
      containers:
      - name: legacy-perl
        image: docker.io/library/legacy-perl-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        securityContext:
          allowPrivilegeEscalation: false
