k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: legacy-perl-service
spec:
  selector:
    app: legacy-perl
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
